openmediavault (0.3.0.3) stable; urgency=low

  * Fix bug when refreshing graphs.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 21 Apr 2012 20:29:17 +0200

openmediavault (0.3.0.2) stable; urgency=low

  * Fix bug when sending a test email.
  * Display loading text while comboboxes are loading their data.
  * Mantis 0000418: Wrong text in rsync job configuration
  * Mantis 0000419: Network interface method
  * Mantis 0000424: No Device when editing a SMART test
  * Mantis 0000425: User dialog/list don't show accented characters

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 19 Apr 2012 19:53:37 +0200

openmediavault (0.3.0.1) stable; urgency=low

  * Mantis 0000416: Remove possibility to wipe system disk
  * Mantis 0000417: Undefined variable: sfobject

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 18 Apr 2012 20:06:43 +0200

openmediavault (0.3) stable; urgency=low

  * Add ability to create self-signed SSL certificates via WebGUI
  * Simplify shared folder permission handling
  * Improve user/group management
  * Improve RSync services
  * Auto-detect non-rotational rootfs devices and set the additional mount
    options noatime,discard
  * Add i18n support
  * Add column 'Repository' to update manager table.
  * Mantis 0000200: Domain field in general config
  * Mantis 0000380: Add the ability to "wipe" or format a disk
  * Mantis 0000385: Not able to install multiple plugins at once
  * Mantis 0000394: FTP: Not possible to set any directives for module mod_tls.c
  * Mantis 0000400: NFS performance options
  * Mantis 0000410: SMART informations are not displayed for SCSI disks
  * Mantis 0000412: Log Viewer should display and sort logs in correct order

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 07 Jan 2012 14:30:55 +0100

openmediavault (0.2.7.3) stable; urgency=low

  * Mantis 0000395: The Upgrade Manager does not show all Packages that
    would be upgraded/installed
