@@ -93,13 +93,6 @@ class ShareMgmtRpc extends OMVRpc {
 					}
 				}
 			}'),
-			"lsDir" => array('{
-				"type":"object",
-				"properties":{
-					"uuid":{'.$GLOBALS['OMV_JSONSCHEMA_UUID'].'},
-					"dir":{"type":"string"}
-				}
-			}'),
 			"getFileACL" => array('{
 				"type":"object",
 				"properties":{
@@ -608,48 +601,6 @@ class ShareMgmtRpc extends OMVRpc {
 		$dispatcher = &OMVNotifyDispatcher::getInstance();
 		$dispatcher->notify(OMV_NOTIFY_MODIFY,
 		  "org.openmediavault.system.shares.sharedfolder.privileges", $object);
-	}
-
-	/**
-	 * List the contents of the given directory. Note, only directories are
-	 * listed.
-	 * @param data An array containing the following fields:
-	 *   \em uuid The UUID of the shared folder object.
-	 *   \em dir The relative directory path.
-	 * @return The directory contents.
-	 */
-	public function lsDir($data) {
-//		$this->debug(var_export(func_get_args(), TRUE));
-		global $xmlConfig;
-		// Check permissions
-		$this->validateSession();
-		if (!$this->hasRole(OMV_ROLE_ADMINISTRATOR)) {
-			throw new OMVException(OMVErrorMsg::E_RPC_SERVICE_INVALID_PERMISSION);
-		}
-		$this->commitSession();
-		// Validate method parameters
-		$this->validateParams(__METHOD__, func_get_args());
-		// The field 'dir' may not contain the characters '..'. This is
-		// because of security reasons: the given canonicalized absolute
-		// path MUST be below the given shared folder.
-		if (1 == preg_match("/\.\./", $data['dir'])) {
-			throw new OMVException(OMVErrorMsg::E_RPC_SERVICE_INVALID_PARAM,
-			  sprintf(gettext("The field '%s' contains forbidden ".
-			  "two-dot symbols"), "dir"));
-		}
-		// Get the absolute shared folder path.
-		$sfpath = OMVRpc::exec("ShareMgmt", "getPath", array(
-		  "uuid" => $data['uuid']));
-		// List the directory contents.
-		$cmd = sprintf("sudo find %s -maxdepth 1 -type d -printf '%%f\n' 2>&1",
-		  escapeshellarg(sprintf("%s/%s", $sfpath, rtrim($data['dir'], "/"))));
-		OMVUtil::exec($cmd, $output, $result);
-		if ($result !== 0) {
-			throw new OMVException(OMVErrorMsg::E_EXEC_FAILED,
-			  $cmd, implode("\n", $output));
-		}
-		array_shift($output);
-		return $output;
 	}
 
 	/**
